--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,9 +49,11 @@ dependencies:
   uuid: ^4.5.2
 
   # Notifications
-  flutter_local_notifications: ^19.5.0
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.9.0
   geolocator: ^14.0.2
   android_intent_plus: ^6.0.0
+  permission_handler: ^11.3.1
   # syncfusion_flutter_datepicker: ^31.1.19
 
 dev_dependencies:
